--- a/src/main/webapp/resources/css/system.css
+++ b/src/main/webapp/resources/css/system.css
@@ -2,7 +2,7 @@ body {
 	background-color: #EAECEE;
 	font-family: Verdana, sans-serif;
 	height: 100%;
-	font-size: 14px;
+	font-size: 12px;
 }
 
 .ui-widget,.ui-widget .ui-widget {
@@ -19,17 +19,49 @@ body {
 
 .trans-col-01 {
 	width: 400px;
+	white-space: nowrap;
 }
 
 .trans-col-02 {
 	width: 100px;
 	text-align: right;
+	white-space: nowrap;
 }
 
 .trans-row-01 {
-	background-color: #d9d9d9;
+	background-color: #76a5af;
+	color: white;
+	font-weight: bold;
+	font-size: 1.1em;
+	border-bottom: 1px solid black;
 }
 
 .trans-row-02 {
 	background-color: white;
 }
+
+
+
+.center-container {
+  position: relative;
+}
+
+.absolute-center {
+  width: 50%;
+  height: 50%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.absolute-center.is-right {
+  left: auto; right: 20px;
+  text-align: right;
+}
+
+.absolute-center.is-left {
+  right: auto; left: 20px;
+  text-align: left;
+}
+
