--- a/src/main/webapp/resources/css/system.css
+++ b/src/main/webapp/resources/css/system.css
@@ -65,3 +65,8 @@ body {
   text-align: left;
 }
 
+.ui-datatable .ui-datatable-header {
+	font-size: 1.4em;
+	font-weight: bold;
+	border: 1px solid #D1D1D1;
+}
