--- a/src/main/webapp/resources/templates/menu.xhtml
+++ b/src/main/webapp/resources/templates/menu.xhtml
@@ -6,6 +6,9 @@
 	xmlns:p="http://primefaces.org/ui">
 	<h:form id="frm-menu">
 		<h:panelGrid columns="1" >
+			<p:commandButton action="/index?faces-redirect=true" value="#{constants['home.title']}" style="width:100px">
+				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['home.title']}"/>
+			</p:commandButton>
 			<p:commandButton action="/pages/transaction?faces-redirect=true" value="#{constants['transaction.title']}" style="width:100px">
 				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['transaction.title']}"/>
 			</p:commandButton>
