--- a/src/main/webapp/resources/templates/menu.xhtml
+++ b/src/main/webapp/resources/templates/menu.xhtml
@@ -12,6 +12,15 @@
 			<p:commandButton action="/pages/transaction?faces-redirect=true" value="#{constants['transaction.title']}" style="width:100px">
 				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['transaction.title']}"/>
 			</p:commandButton>
+			<p:commandButton action="/pages/balance?faces-redirect=true" value="#{constants['balance.title']}" style="width:100px">
+				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['balance.title']}"/>
+			</p:commandButton>
+			<p:commandButton action="/pages/transfer?faces-redirect=true" value="#{constants['transfer.title']}" style="width:100px">
+				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['transfer.title']}"/>
+			</p:commandButton>
+			<p:commandButton action="/pages/compare?faces-redirect=true" value="#{constants['compare.title']}" style="width:100px">
+				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['compare.title']}"/>
+			</p:commandButton>
 			<p:commandButton action="/pages/exportImport?faces-redirect=true" value="Export/Import" style="width:100px">
 				<f:setPropertyActionListener target="#{flash.crudPage}" value="#{constants['transaction.title']}"/>
 			</p:commandButton>
