--- a/src/main/webapp/resources/css/crud.css
+++ b/src/main/webapp/resources/css/crud.css
@@ -4,10 +4,10 @@ body {
 	height: 100%;
 	font-size: 14px;
 }
-
+/*
 .ui-widget,.ui-widget .ui-widget {
 	font-size: 90% !important;
-}
+}*/
 
 #header {
 	text-align: center;
